fix(scss): Use consistent spacing instead of tabs

--- a/djangoproject/scss/_utils.scss
+++ b/djangoproject/scss/_utils.scss
@@ -47,8 +47,8 @@ $font-path: "../fonts/fira-mono";
     font-family: 'Fira Mono';
     src: url('#{$font-path}/FiraMono-Regular.eot');
     src: url('#{$font-path}/FiraMono-Regular.eot') format('embedded-opentype'),
-         url('#{$font-path}/FiraMono-Regular.woff') format('woff'),
-         url('#{$font-path}/FiraMono-Regular.ttf') format('truetype');
+    url('#{$font-path}/FiraMono-Regular.woff') format('woff'),
+    url('#{$font-path}/FiraMono-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
@@ -57,8 +57,8 @@ $font-path: "../fonts/fira-mono";
     font-family: 'Fira Mono';
     src: url('#{$font-path}/FiraMono-Bold.eot');
     src: url('#{$font-path}/FiraMono-Bold.eot') format('embedded-opentype'),
-         url('#{$font-path}/FiraMono-Bold.woff') format('woff'),
-         url('#{$font-path}/FiraMono-Bold.ttf') format('truetype');
+    url('#{$font-path}/FiraMono-Bold.woff') format('woff'),
+    url('#{$font-path}/FiraMono-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
@@ -84,8 +84,8 @@ $font-path: "../fonts/fira-mono";
 
 // Retina media query mixin
 @mixin retina-display {
-    @media only screen and
-    (-webkit-min-device-pixel-ratio: 2),
+
+    @media only screen and (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi) {
         @content;
     }
@@ -95,20 +95,23 @@ $font-path: "../fonts/fira-mono";
 @mixin serif {
     font-family: Palatino, "Palatino Linotype", "Book Antiqua", "Hoefler Text", Georgia, "Lucida Bright", Cambria, Times, "Times New Roman", serif;
 }
+
 @mixin sans-serif {
     font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
 }
+
 @mixin monospace {
     font-family: "Fira Mono", Consolas, Menlo, Monaco, "Courier New", Courier, monospace;
-    font-variant-ligatures: no-common-ligatures;  // disables the common ligatures only
-    text-rendering: optimizeSpeed;  // for Safari 7.x
+    font-variant-ligatures: no-common-ligatures; // disables the common ligatures only
+    text-rendering: optimizeSpeed; // for Safari 7.x
 }
 
 // Font Sizing Mixin (http://css-tricks.com/snippets/css/less-mixin-for-rem-font-sizing/)
 html {
     font-size: 62.5%;
 }
-@mixin font-size ( $size: 16 ) {
+
+@mixin font-size ($size: 16) {
     font-size: $size + px;
     font-size: $size/10 + rem;
 }
@@ -124,21 +127,25 @@ html {
     position: absolute;
     width: 1px;
 }
+
 @mixin clearfix {
+
     &:before,
     &:after {
         content: "";
         display: table;
     }
+
     &:after {
         clear: both;
     }
 }
 
-@mixin svg-image ( $name ) {
-    background-image: url('../img/'+$name+'.png');
+@mixin svg-image ($name ) {
+    background-image: url('../img/' +$name+'.png');
+
     .mdzr-svg & {
-        background-image: url('../img/'+$name+'.svg');
+        background-image: url('../img/' +$name+'.svg');
     }
 }
 
@@ -146,9 +153,11 @@ html {
 @mixin link-green {
     color: var(--link-color);
     text-decoration: none;
+
     &:visited {
         color: var(--link-color);
     }
+
     &:hover,
     &:active,
     &:focus {
@@ -160,15 +169,15 @@ html {
 
 // Secondary content box-shadow:
 @mixin secondary-shadow-top {
-    -moz-box-shadow: 0 4px 8px rgba(12,60,38,0.07);
-    -webkit-box-shadow: 0 4px 8px rgba(12,60,38,0.07);
-    box-shadow: 0 4px 8px rgba(12,60,38,0.07);
+    -moz-box-shadow: 0 4px 8px rgba(12, 60, 38, 0.07);
+    -webkit-box-shadow: 0 4px 8px rgba(12, 60, 38, 0.07);
+    box-shadow: 0 4px 8px rgba(12, 60, 38, 0.07);
 }
 
 @mixin secondary-shadow-bottom {
-    -moz-box-shadow: 0 -4px 8px rgba(12,60,38,0.07);
-    -webkit-box-shadow: 0 -4px 8px rgba(12,60,38,0.07);
-    box-shadow: 0 -4px 8px rgba(12,60,38,0.07);
+    -moz-box-shadow: 0 -4px 8px rgba(12, 60, 38, 0.07);
+    -webkit-box-shadow: 0 -4px 8px rgba(12, 60, 38, 0.07);
+    box-shadow: 0 -4px 8px rgba(12, 60, 38, 0.07);
 }
 
 @mixin framed-image {
