--- a/djangoproject/scss/font-awesome/_bordered-pulled.scss
+++ b/djangoproject/scss/font-awesome/_bordered-pulled.scss
@@ -2,15 +2,25 @@
 // -------------------------
 
 .#{$fa-css-prefix}-border {
-  padding: .2em .25em .15em;
-  border: solid .08em $fa-border-color;
-  border-radius: .1em;
+    padding: .2em .25em .15em;
+    border: solid .08em $fa-border-color;
+    border-radius: .1em;
 }
 
-.pull-right { float: right; }
-.pull-left { float: left; }
+.pull-right {
+    float: right;
+}
+
+.pull-left {
+    float: left;
+}
 
 .#{$fa-css-prefix} {
-  &.pull-left { margin-right: .3em; }
-  &.pull-right { margin-left: .3em; }
+    &.pull-left {
+        margin-right: .3em;
+    }
+
+    &.pull-right {
+        margin-left: .3em;
+    }
 }
